# dessert

./: Cargo.toml  justfile
src/: email.rs  main.rs
