[package]
name = "dessert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
regex = "1.10.2"
simplelog = "0.12.1"
tempfile = "3.8.0"
titlecase = "2.2.1"
unrar = "0.5.1"
log = "0.4.20"
